--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+:root {
+  --medium-purple:#8968cd;
+  --deep-purple:#0a0612;
+  --lavender-blush:#fff0f5;
+}
+
