register and login htlm and css

--- a/src/app/pages/buyer/auth-page/auth-page.component.html
+++ b/src/app/pages/buyer/auth-page/auth-page.component.html
@@ -1,1 +1,44 @@
-<p>auth-page works!</p>
+<div class="container">
+  <div class="content-wrapper">
+    <!-- Image Section -->
+    <div class="image-section">
+      <img src="images/landingPic.png" class="rounded" alt="...">
+    </div>
+
+    <!-- Login Form Section -->
+    <div class="form-card">
+      <div class="heading">Login</div>
+
+      <div class="input-group">
+        <input
+          type="text"
+          placeholder="Email"
+          #email
+          class="input"
+        />
+      </div>
+
+      <div class="input-group">
+        <input
+          type="password"
+          placeholder="Password"
+          #password
+          class="input"
+        />
+      </div>
+
+      <button
+        type="button"
+
+        class="login-btn"
+      >
+        Login
+      </button>
+
+      <div class="register-link">
+        Don’t have an account?
+        <a routerLink="/buyer-register" >Register</a>
+      </div>
+    </div>
+  </div>
+</div>
