runner-list cards and routing in buyer auth html, then added routing in app.routes

--- a/src/app/pages/buyer/auth-page/auth-page.component.html
+++ b/src/app/pages/buyer/auth-page/auth-page.component.html
@@ -10,34 +10,20 @@
       <div class="heading">Login</div>
 
       <div class="input-group">
-        <input
-          type="text"
-          placeholder="Email"
-          #email
-          class="input"
-        />
+        <input type="text" placeholder="Email" #email class="input" />
       </div>
 
       <div class="input-group">
-        <input
-          type="password"
-          placeholder="Password"
-          #password
-          class="input"
-        />
+        <input type="password" placeholder="Password" #password class="input" />
       </div>
 
-      <button
-        type="button"
-
-        class="login-btn"
-      >
+      <button routerLink="/runner-list" type="button" class="login-btn">
         Login
       </button>
 
       <div class="register-link">
-        Don’t have an account?
-        <a routerLink="/buyer-register" >Register</a>
+        Don't have an account?
+        <a routerLink="/buyer-register">Register</a>
       </div>
     </div>
   </div>
