--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,8 @@
   --medium-purple:#8968cd;
   --deep-purple:#0a0612;
   --lavender-blush:#fff0f5;
+  --light-gray: #f5f5f5;
+  --dark-gray: #333333;
 }
 
 
