runner profile with the routerlink in the runner list, app.routes updated as well

--- a/src/app/pages/buyer/runner-list-page/runner-list-page.component.html
+++ b/src/app/pages/buyer/runner-list-page/runner-list-page.component.html
@@ -35,7 +35,7 @@
               <span class="rating-value">(3.0)</span>
             </div>
           </div>
-          <button class="view-profile-btn">View Profile</button>
+          <button routerLink = '/runnerProfile' class="view-profile-btn">View Profile</button>
         </div>
   
         <!-- Runner Card 2 -->
@@ -53,7 +53,7 @@
               <span class="rating-value">(4.0)</span>
             </div>
           </div>
-          <button class="view-profile-btn">View Profile</button>
+          <button routerLink = '/runnerProfile' class="view-profile-btn">View Profile</button>
         </div>
   
         <!-- Runner Card 3 -->
@@ -71,7 +71,7 @@
               <span class="rating-value">(5.0)</span>
             </div>
           </div>
-          <button class="view-profile-btn">View Profile</button>
+          <button routerLink = '/runnerProfile' class="view-profile-btn">View Profile</button>
         </div>
   
         <!-- Runner Card 4 -->
@@ -89,7 +89,7 @@
               <span class="rating-value">(4.5)</span>
             </div>
           </div>
-          <button class="view-profile-btn">View Profile</button>
+          <button routerLink = '/runnerProfile' class="view-profile-btn">View Profile</button>
         </div>
   
         <!-- Runner Card 5 -->
@@ -107,7 +107,7 @@
               <span class="rating-value">(3.0)</span>
             </div>
           </div>
-          <button class="view-profile-btn">View Profile</button>
+          <button routerLink = '/runnerProfile' class="view-profile-btn">View Profile</button>
         </div>
   
         <!-- Runner Card 6 -->
@@ -125,7 +125,7 @@
               <span class="rating-value">(2.0)</span>
             </div>
           </div>
-          <button class="view-profile-btn">View Profile</button>
+          <button routerLink = '/runnerProfile' class="view-profile-btn">View Profile</button>
         </div>
       </div>
     </div>
