product details added with routerlinks

--- a/src/app/pages/buyer/runner-profile-page/runner-profile-page.component.html
+++ b/src/app/pages/buyer/runner-profile-page/runner-profile-page.component.html
@@ -43,7 +43,7 @@
                 <h5 class="card-title">T-shirt</h5>
                 <p class="card-text">Comfortable cotton T-shirt available in various colors.</p>
                 <span class="product-price">$20.00</span>
-                <button class="btn btn-primary add-to-order-btn" data-product="T-shirt">See More</button>
+                <button routerLink="/productDetails" class="btn btn-primary add-to-order-btn" data-product="T-shirt">View Details</button>
               </div>
             </div>
           </div>
@@ -56,7 +56,7 @@
                 <h5 class="card-title">Blender</h5>
                 <p class="card-text">High-speed blender for smoothies and more.</p>
                 <span class="product-price">$80.00</span>
-                <button class="btn btn-primary add-to-order-btn" data-product="Blender">See More</button>
+                <button routerLink="/productDetails" class="btn btn-primary add-to-order-btn" data-product="Blender">View Details</button>
               </div>
             </div>
           </div>
@@ -69,7 +69,7 @@
                 <h5 class="card-title">Decorative Vase</h5>
                 <p class="card-text">Elegant glass vase for home decoration.</p>
                 <span class="product-price">$30.00</span>
-                <button class="btn btn-primary add-to-order-btn" data-product="Decorative Vase">See More</button>
+                <button routerLink="/productDetails" class="btn btn-primary add-to-order-btn" data-product="Decorative Vase">View Details</button>
               </div>
             </div>
           </div>
@@ -82,7 +82,7 @@
                 <h5 class="card-title">4pc Set</h5>
                 <p class="card-text">Bread Bin & Canister Set - 4pc Tin.</p>
                 <span class="product-price">$110.00</span>
-                <button class="btn btn-primary add-to-order-btn" data-product="Blender">See More</button>
+                <button routerLink="/productDetails" class="btn btn-primary add-to-order-btn" data-product="Blender">View Details</button>
               </div>
             </div>
           </div>
