--- a/src/app/pages/buyer/product-details/product-details.component.html
+++ b/src/app/pages/buyer/product-details/product-details.component.html
@@ -34,7 +34,7 @@
       </div>
   
       <button class="add-to-cart-btn">
-        <i class="fas fa-shopping-cart"></i> Add to Cart
+        <i routerLink="/cart" class="fas fa-shopping-cart"></i> Add to Cart
       </button>
     
       <button routerLink="/runnerProfile" class="add-to-cart-btn">See More</button>
