--- a/src/styles.css
+++ b/src/styles.css
@@ -1,11 +1,6 @@
 :root {
-  --medium-purple:#8968cd;
-  --deep-purple:#0a0612;
-  --lavender-blush:#fff0f5;
-  --light-gray: #f5f5f5;
-  --dark-gray: #333333;
-  --error-red: #e63946;
+  --green-buttons: #3c5a5d;
+  --white-background: #f6f6f6;
+  --black-text: #0c1415;
+  --seondary-background: #707f81;
 }
-
-
-
