--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 :root {
-  --green-buttons: #3c5a5d;
+  --green-buttons-links: #3c5a5d;
   --white-background: #f6f6f6;
   --black-text: #0c1415;
   --seondary-background: #707f81;
