figma design code

--- a/src/app/pages/buyer/auth-page/auth-page.component.html
+++ b/src/app/pages/buyer/auth-page/auth-page.component.html
@@ -1,30 +1,25 @@
-<div class="container">
-  <div class="content-wrapper">
-    <!-- Image Section -->
-    <div class="image-section">
-      <img src="images/landingPic.png" class="rounded" alt="...">
-    </div>
-
-    <!-- Login Form Section -->
-    <div class="form-card">
-      <div class="heading">Login</div>
-
-      <div class="input-group">
-        <input type="text" placeholder="Email" #email class="input" />
-      </div>
-
-      <div class="input-group">
-        <input type="password" placeholder="Password" #password class="input" />
-      </div>
-
-      <button routerLink="/runner-list" type="button" class="login-btn">
-        Login
-      </button>
-
-      <div class="register-link">
-        Don't have an account?
-        <a routerLink="/buyer-register">Register</a>
-      </div>
-    </div>
+<div class="sign-in">
+  <div class="back-arrow">
+    <img class="back-arrow2" src="back-arrow1.png" />
   </div>
+  <div class="forgot-password">Forgot Password?</div>
+  <div class="sign-in2">Sign In</div>
+  <input class="div" type= "password" placeholder="**************"/>
+
+  <div class="rectangle-10"></div>
+  <input class="johndoe-gmail-com" type= "text" placeholder="johndoe@gmail.com"/>
+  <div class="don-t-have-an-account-sign-up">
+    <span>
+      <span class="don-t-have-an-account-sign-up-span">
+        Don’t have an account?
+      </span>
+      <span class="don-t-have-an-account-sign-up-span2"></span>
+      <span class="don-t-have-an-account-sign-up-span3">Sign Up</span>
+    </span>
+  </div>
+  <div class="rectangle-9"></div>
+  <div class="sign-in3">Sign In</div>
+  <div class="ellipse-11"></div>
+  <div class="ellipse-12"></div>
+  <img class="logo-wwhite" src="images/logo-whit.png" />
 </div>
