--- a/src/app/pages/buyer/runner-profile-page/runner-profile-page.component.css
+++ b/src/app/pages/buyer/runner-profile-page/runner-profile-page.component.css
@@ -151,7 +151,7 @@
   }
   
   .add-to-order-btn:hover {
-    background-color: #0056b3;
+    background-color: var(--deep-purple);
   }
   
   /* Make the cards responsive */
