--- a/src/app/pages/buyer/product-details/product-details.component.html
+++ b/src/app/pages/buyer/product-details/product-details.component.html
@@ -33,8 +33,8 @@
         <input type="number" id="quantity-selection" value="1" min="1" max="10">
       </div>
   
-      <button class="add-to-cart-btn">
-        <i routerLink="/cart" class="fas fa-shopping-cart"></i> Add to Cart
+      <button class="add-to-cart-btn" routerLink="/cart" >
+        <i class="fas fa-shopping-cart"></i> Add to Cart
       </button>
     
       <button routerLink="/runnerProfile" class="add-to-cart-btn">See More</button>
