--- a/src/styles.css
+++ b/src/styles.css
@@ -2,5 +2,5 @@
   --green-buttons-links: #3c5a5d;
   --white-background: #f6f6f6;
   --black-text: #0c1415;
-  --seondary-background: #707f81;
+  --secondary-background: #707f81;
 }
