--- a/src/app/components/chat-system/chat-system.component.css
+++ b/src/app/components/chat-system/chat-system.component.css
@@ -3,7 +3,7 @@ body {
   margin-top: 20px;
 }
 .card {
-  background: #fff;
+  background: var(--seondary-background);
   transition: 0.5s;
   border: 0;
   margin-bottom: 30px;
