--- a/src/app/pages/buyer/buyer-runner-dashboard/buyer-runner-dashboard.component.html
+++ b/src/app/pages/buyer/buyer-runner-dashboard/buyer-runner-dashboard.component.html
@@ -1,13 +1,192 @@
-<body>
-    <div class="topDivSearchAndBack">
-
-        <img class="back-arrow" src="https://img.icons8.com/android/24/circled-left-2.png" />
-
-        <div class="search-bar">
-            <div class="rectangle-25"></div>
-            <img class="search" src="https://img.icons8.com/?size=100&id=59878&format=png&color=000000" />
-            <div class="search-product">Search product</div>
-        </div>
-          
+<div class="buyers-runner-dashboard">
+    <div class="categories">Categories</div>
+    <div class="all-products">All Products</div>
+    <div class="navbar"></div>
+    <div class="clothes">Clothes</div>
+    <div class="hair">Hair</div>
+    <div class="kitchen-wear">Kitchen Wear</div>
+    <div class="event-d-cor">Event Décor</div>
+    <div class="home-d-cor">Home Décor</div>
+    <div class="ellipse-1"></div>
+    <div class="ellipse-2"></div>
+    <div class="ellipse-3"></div>
+    <div class="ellipse-4"></div>
+    <div class="ellipse-5"></div>
+    <img class="clothes2" src="clothes1.png" />
+    <img class="woman-s-hair" src="woman-s-hair0.png" />
+    <img class="kitchenwares" src="kitchenwares0.png" />
+    <img class="party-balloons" src="party-balloons0.png" />
+    <img class="baby-mobile" src="baby-mobile0.png" />
+    <div class="rectangle-46"></div>
+    <div class="items-box">
+      <div class="rectangle-73"></div>
+      <img class="white-dress" src="white-dress0.png" />
+      <div class="summer-dress">Summer Dress</div>
+      <div class="r-167-99">R 167.99</div>
     </div>
-</body>
+    <div class="items-box2">
+      <div class="rectangle-732"></div>
+      <div class="rectangle-74"></div>
+      <div class="view-button">
+        <img class="rectangle-63" src="rectangle-630.svg" />
+        <div class="view-details">View Details</div>
+      </div>
+      <div class="view-button2">
+        <img class="rectangle-632" src="rectangle-631.svg" />
+        <div class="view-details2">View Details</div>
+      </div>
+      <img class="white-dress2" src="white-dress1.png" />
+      <div class="summer-dress2">Summer Dress</div>
+      <div class="r-167-992">R 167.99</div>
+    </div>
+    <div class="items-box3">
+      <div class="rectangle-742"></div>
+      <div class="delete-button">
+        <div class="rectangle-633"></div>
+        <div class="view-details3">View Details</div>
+      </div>
+      <img
+        class="women-s-black-satin-dress"
+        src="women-s-black-satin-dress0.png"
+      />
+      <div class="summer-dress3">Summer Dress</div>
+      <div class="r-167-993">R 167.99</div>
+    </div>
+    <div class="items-box4">
+      <div class="rectangle-743"></div>
+      <div class="rectangle-75"></div>
+      <div class="delete-button2">
+        <div class="rectangle-634"></div>
+        <div class="view-details4">View Details</div>
+      </div>
+      <div class="delete-button3">
+        <div class="rectangle-635"></div>
+        <div class="view-details5">View Details</div>
+      </div>
+      <img
+        class="women-s-black-satin-dress2"
+        src="women-s-black-satin-dress1.png"
+      />
+      <div class="summer-dress4">Summer Dress</div>
+      <div class="r-167-994">R 167.99</div>
+    </div>
+    <img class="rectangle-752" src="rectangle-751.svg" />
+    <img class="rectangle-76" src="rectangle-760.svg" />
+    <div class="items-box5">
+      <div class="delete-button4">
+        <div class="rectangle-636"></div>
+        <div class="view-details6">View Details</div>
+      </div>
+      <div class="delete-button5">
+        <div class="rectangle-637"></div>
+        <div class="view-details7">View Details</div>
+      </div>
+      <img class="_3-round-mirror-pack" src="_3-round-mirror-pack0.png" />
+      <div class="summer-dress5">Summer Dress</div>
+      <div class="r-167-995">R 167.99</div>
+    </div>
+    <div class="items-box6">
+      <img
+        class="_1730266600568-a-473-cfde-7-d-0-efe-3-bce-4-c-132-ad-7-d-86-thumbnail-220-x-293"
+        src="_1730266600568-a-473-cfde-7-d-0-efe-3-bce-4-c-132-ad-7-d-86-thumbnail-220-x-2930.png"
+      />
+      <div class="summer-dress6">Summer Dress</div>
+      <div class="r-167-996">R 167.99</div>
+      <div class="delete-button">
+        <div class="rectangle-638"></div>
+        <div class="out-of-stock">Out of stock</div>
+      </div>
+    </div>
+    <div class="card">
+      <img class="beechwood-whisk" src="beechwood-whisk0.png" />
+      <div class="summer-dress7">Summer Dress</div>
+      <div class="r-167-997">R 167.99</div>
+    </div>
+    <div class="card2">
+      <div class="summer-dress8">Summer Dress</div>
+      <div class="r-167-998">R 167.99</div>
+    </div>
+    <div class="items-box7">
+      <div class="delete-button6">
+        <div class="rectangle-639"></div>
+        <div class="delete">Delete</div>
+      </div>
+      <div class="view-button3">
+        <div class="rectangle-6310"></div>
+        <div class="view">View</div>
+      </div>
+      <img
+        class="jet-home-coral-peach-oolong-diffuser-40-ml-jet"
+        src="jet-home-coral-peach-oolong-diffuser-40-ml-jet0.png"
+      />
+      <div class="coral-peach-diffuser">Coral Peach Diffuser</div>
+      <div class="r-220-99">R 220.99</div>
+    </div>
+    <div class="items-box7">
+      <div class="delete-button7">
+        <div class="rectangle-6311"></div>
+        <div class="delete2">Delete</div>
+      </div>
+      <div class="view-button4">
+        <div class="rectangle-6312"></div>
+        <div class="view2">View</div>
+      </div>
+      <img
+        class="_17302666000446400-e-03-f-3635-d-02852-af-24-c-87-fc-2-d-thumbnail-900-x"
+        src="_17302666000446400-e-03-f-3635-d-02852-af-24-c-87-fc-2-d-thumbnail-900-x0.png"
+      />
+      <div class="summer-dress9">Summer Dress</div>
+      <div class="r-167-999">R 167.99</div>
+    </div>
+    <div class="items-box7">
+      <div class="delete-button8">
+        <div class="rectangle-6313"></div>
+        <div class="delete3">Delete</div>
+      </div>
+      <div class="view-button5">
+        <div class="rectangle-6314"></div>
+        <div class="view3">View</div>
+      </div>
+      <img class="white-dress3" src="white-dress2.png" />
+      <div class="summer-dress10">Summer Dress</div>
+      <div class="r-167-9910">R 167.99</div>
+    </div>
+    <div class="rectangle-72"></div>
+    <div class="rectangle-25"></div>
+    <div class="chat-with-runner">Chat with Runner</div>
+    <img class="communication" src="communication0.png" />
+    <div class="rectangle-70"></div>
+    <div class="_12-reviews">12 reviews</div>
+    <div class="_4-0">(4.0)</div>
+    <div class="john-doe">John Doe</div>
+    <img
+      class="avatar-of-thoughtful-man-holding-hand-near-face"
+      src="avatar-of-thoughtful-man-holding-hand-near-face0.png"
+    />
+    <div class="verified">
+      <div class="rectangle-71"></div>
+      <div class="verified2">Verified</div>
+      <img class="done" src="done0.png" />
+    </div>
+    <div class="star">
+      <img class="star2" src="star1.png" />
+      <img class="star3" src="star2.png" />
+      <img class="star4" src="star3.png" />
+      <img class="star5" src="star4.png" />
+      <img class="star6" src="star5.png" />
+    </div>
+    <div class="ellipse-20"></div>
+    <div class="online">Online</div>
+    <div class="rectangle-252"></div>
+    <img class="search" src="search0.png" />
+    <div class="search-product">Search product</div>
+    <img class="back-arrow" src="back-arrow0.png" />
+    <div class="buyer-nav">
+      <div class="navbar2"></div>
+      <img class="shopping-cart" src="shopping-cart0.png" />
+      <img class="envelope-dots" src="envelope-dots0.png" />
+      <img class="logo" src="logo0.png" />
+      <img class="test-account" src="test-account0.png" />
+    </div>
+  </div>
+  
